templatia-derive/tests/compile_fail/missing_field.stderr
error: DbCfg has no field named "username"
 --> tests/compile_fail/missing_field.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/missing_field.rs:5:41
  |
5 | struct DbCfg { host: String, port: u16 }
  |                                         ^ consider adding a `main` function to `$DIR/tests/compile_fail/missing_field.rs`

error[E0609]: no field `username` on type `&DbCfg`
 --> tests/compile_fail/missing_field.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ unknown field
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
